Fix recipe list on index.html being off-center

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,6 +55,8 @@ p {
 .recipes {
     text-align: center;
     list-style-type: none;
+    margin-left: 0;
+    padding: 0;
 }
 
 .recipes a,
